Validators and dtos created